--- a/data-pipeline/docker/mara-app/Dockerfile
+++ b/data-pipeline/docker/mara-app/Dockerfile
@@ -17,11 +17,11 @@ RUN apt-get update -y && apt-get install -y \
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-RUN git clone https://github.com/ianco/von-bc-registries-agent.git
+RUN git clone https://github.com/bcgov/von-bc-registries-agent.git
 RUN mv /von-bc-registries-agent/data-pipeline /
 
 # Debugging
-RUN ls -last .scripts/mara-app
-
-RUN cd data-pipeline/ && make install-packages
+RUN cd data-pipeline/ \
+		&& ls -last .scripts/mara-app \
+		&& make install-packages
 
