#3 - Update Mara build
- Remove debug code.

--- a/data-pipeline/docker/mara-app/Dockerfile
+++ b/data-pipeline/docker/mara-app/Dockerfile
@@ -1,35 +1,39 @@
 FROM ubuntu:16.04
 
-# marabase section
-
-RUN apt-get update -y && apt-get install -y \
-  build-essential \
-  git dialog coreutils graphviz \
-  software-properties-common python-software-properties \
-        postgresql-client
+# mara-base section
+RUN apt-get update -y \
+    && apt-get install -y \
+                build-essential \
+                git \
+                dialog \
+                coreutils \
+                graphviz \
+                software-properties-common \
+                python-software-properties \
+                postgresql-client
 RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt-get update -y && apt-get install -y \
-  python3.6 python3.6-dev python3.6-venv \
-  python-psycopg2 libpq-dev
+RUN apt-get update -y \
+    && apt-get install -y \
+                python3.6 \
+                python3.6-dev \
+                python3.6-venv \
+                python-psycopg2 \
+                libpq-dev
 
-# mara app section - this is specific to our use of mara
-
+# mara-app section - this is specific to our use of mara
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
+# Copy source code
 ADD . /data-pipeline
 
-RUN ls -last /data-pipeline
-RUN ls -last /data-pipeline/.scripts/mara-app
+# Set ownership and permissions
+# Set scripts as executable (make files and python files do not have to be marked)
 RUN chown -R 1001:0 /data-pipeline \
     && chmod -R ug+rw /data-pipeline \
     && chmod ug+x /data-pipeline/.scripts/mara-app/*.sh \
     && chmod ug+x /data-pipeline/.scripts/mara-app/makeshell
 
-# Debugging
-RUN pwd
-RUN ls -last
 RUN cd data-pipeline/ \
-    && ls -last .scripts/mara-app \
     && make install-packages
 
