--- a/data-pipeline/docker/postgres/Dockerfile
+++ b/data-pipeline/docker/postgres/Dockerfile
@@ -4,5 +4,5 @@ from postgres:10
 COPY docker/postgres/1-init-dbs.sh /docker-entrypoint-initdb.d/
 
 # Set permissions on the data folder
-RUN chown -R 1001:0 $PGDATA \
-    && chmod -R ug+rw $PGDATA
+RUN chown -R 1001:0 /var/lib/pgsql/data \
+    && chmod -R ug+rw /var/lib/pgsql/data
