--- a/data-pipeline/docker/postgres/Dockerfile
+++ b/data-pipeline/docker/postgres/Dockerfile
@@ -5,5 +5,5 @@ COPY docker/postgres/1-init-dbs.sh /docker-entrypoint-initdb.d/
 
 # Set permissions on the data folder
 RUN mkdir -p /var/lib/pgsql/data \
-    && chown -R 1001:0 /var/lib/pgsql/data \
+    && chown -R postgres:postgres /var/lib/pgsql/data \
     && chmod -R ug+rw /var/lib/pgsql/data
