--- a/bcreg-x/caddy/Caddyfile
+++ b/bcreg-x/caddy/Caddyfile
@@ -1,20 +1,26 @@
-{%WEB_HOST_NAME%}:80, {%WEB_HOST_NAME%}:443 {
-    log logs/access.log
-    root /srv/
-    tls self_signed
+{%WEB_HOST_NAME%}:{%WEB_HOST_PORT%} {
+    
+    root /srv/    
+
+    # Uncomment the following to enable logging; requires a mounted volume.
+    # log logs/access.log
+    tls {%WEB_HOST_TLS%}  # Use `self_signed` to enable self_signed tls, or `off` to disable tls.  TLS not needed for OpenShift.
 
     rewrite {
         r ^/bcreg/assets/(.*)$
         to /assets/{1}
     }
 
-    proxy /bc-tob {%TOB_API_URL%}/api/v1 {
+    proxy /bc-tob {%TOB_API_URL%} {
         without /bc-tob
     }
 
-    proxy / agent:8000 {
+    proxy / {%AGENT_HOST%}:{%AGENT_PORT%} {
         except /assets
-        # health_check /health  # return 502 bad gateway if not synced
+        
+        # Health Checks to `/health` pass through to the bcreg-x-agent
+        # They will return 502 bad gateway if the agent is not synced or it is unavailable.
+        
         transparent
     }
 }
