--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,14 +8,17 @@ services:
     environment:
       TOB_API_URL: ${TOB_API_URL:-}
       WEB_BASE_HREF: ${WEB_BASE_HREF:-/}
-      WEB_HOST_NAME: ${WEB_HOST_NAME:-localhost}
+      WEB_HOST_NAME: ${WEB_HOST_NAME:-0.0.0.0}
+      WEB_HOST_PORT: ${WEB_HOST_PORT:-8080}
+      WEB_HOST_TLS: ${WEB_HOST_TLS:-off}
+      AGENT_HOST: ${AGENT_HOST:-agent}
+      AGENT_PORT: ${AGENT_PORT:-8000}
     links:
       - bcreg-agent:agent
     networks:
       - vonx
     ports:
-      - ${WEB_HTTP_PORT:-5000}:80
-      - ${WEB_HTTPS_PORT:-5443}:443
+      - ${WEB_HTTP_PORT:-5000}:${WEB_HOST_PORT:-8080}
     volumes:
       - caddy-data:/root/.caddy
       - caddy-logs:/srv/logs
