#3 - Setup default user account for OpenShift assigned user

--- a/data-pipeline/docker/mara-app/Dockerfile
+++ b/data-pipeline/docker/mara-app/Dockerfile
@@ -61,7 +61,8 @@ RUN chown -R mara:root $HOME \
     && chmod -R ug+rw $HOME \
     && chmod ug+x $HOME/.scripts/mara-app/*.sh \
     && chmod ug+x $HOME/.scripts/mara-app/makeshell \
-    && chmod ug+x $entrypoint
+    && chmod ug+x $entrypoint \
+    && chmod r+rw /etc/passwd
 
 USER $uid
 ENTRYPOINT ["bash", "docker-entrypoint.sh"]
