--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -1,11 +1,15 @@
 issuers:
-  BC-REG:
+  bcreg:
     name: BC Corporate Registry
     abbreviation: BCReg
     url: "https://www2.gov.bc.ca/gov/content/governments/organizational-structure/\
       ministries-organizations/ministries/citizens-services/bc-registries-online-services"
     email: bcreg.test.issuer@example.ca
     url: $APPLICATION_URL
+
+    connection:
+      type: TheOrgBook
+      api_url: $TOB_API_URL
 
     wallet:
       seed: $WALLET_SEED_BCREG
@@ -14,11 +18,15 @@ issuers:
       - description: Incorporation
         schema: incorporation.bc_registries
         issuer_url: $APPLICATION_URL_INCORP
-        source_claim: legal_entity_id
+        topic:
+          source_id:
+            input: corp_num
+            from: claim
+          type:
+            input: incorporation
+            from: value
         mapping:
           - model: name
-            cardinality_fields:
-              - type
             fields:
               text:
                 input: legal_name
@@ -30,11 +38,21 @@ issuers:
       - description: Doing Business As
         schema: doing_business_as.bc_registries
         issuer_url: $APPLICATION_URL_DBA
-        source_claim: legal_entity_id
+        topic:
+          parent_source_id:
+            input: org_registry_id
+            from: claim
+          parent_type:
+            input: incorporation
+            from: value
+          source_id:
+            input: dba_corp_num
+            from: claim
+          type:
+            input: doing_business_as
+            from: value
         mapping:
           - model: name
-            cardinality_fields:
-              - type
             fields:
               text:
                 input: dba_name
@@ -46,11 +64,31 @@ issuers:
       - description: Corporate Address
         schema: address.bc_registries
         issuer_url: $APPLICATION_URL_ADDRESS
-        source_claim: legal_entity_id
+        topic:
+          -
+            parent_source_id:
+              input: org_registry_id
+              from: claim
+            parent_type:
+              input: incorporation
+              from: value
+            source_id:
+              input: dba_corp_num
+              from: claim
+            type:
+              input: doing_business_as
+              from: value
+          -
+            source_id:
+              input: org_registry_id
+              from: claim
+            type:
+              input: incorporation
+              from: value
+        cardinality_fields:
+          - addr_type
         mapping:
           - model: address
-            cardinality_fields:
-              - type
             fields:
               addressee:
                 input: addressee
@@ -77,6 +115,15 @@ issuers:
                 input: end_date
                 from: claim
 
+verifiers:
+  bctob:
+    name: BC OrgBook
+    connection:
+      type: TheOrgBook
+      api_url: $TOB_API_URL
+    wallet:
+      seed: "tob-verifier-wallet-000000000001"
+
 proof_requests:
   registration:
     version: '1.0.0'
@@ -89,7 +136,7 @@ proof_requests:
           - legal_entity_id
           - corp_num
           - legal_name
-          - legal_name_effective
+          - org_name_effective
           - org_name_assumed
           - org_name_assumed_effective
           - org_name_trans
