--- a/bcreg-x/Dockerfile
+++ b/bcreg-x/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR $HOME
 
 RUN pip install --no-cache-dir \
     gunicorn \
+    git+https://github.com/PSPC-SPAC-buyandsell/didauth.git@v1.1 \
     git+https://github.com/PSPC-SPAC-buyandsell/von-x.git@v2
 
 # `ADD --chown=` is not available in OpenShift yet.
