#3 - Install go-crond

--- a/data-pipeline/docker/mara-app/Dockerfile
+++ b/data-pipeline/docker/mara-app/Dockerfile
@@ -22,6 +22,11 @@ RUN apt-get update -y \
                 python-psycopg2 \
                 libpq-dev
 
+ARG GOCROND_VERSION=0.6.1
+ADD https://github.com/webdevops/go-crond/releases/download/$GOCROND_VERSION/go-crond-64-linux /usr/local/bin/
+RUN mv /usr/local/bin/go-crond-64-linux /usr/local/bin/go-crond \
+    && chmod ug+x /usr/local/bin/go-crond
+
 # mara-app section - this is specific to our use of mara
 # ======================================================
 
