#3 - Refine cron job(s)
- Run the bc-reg-pipeline every 15 minutes.
- Run go-crond in verbose mode to get job feedback.
- Document selection of go-crond

--- a/data-pipeline/docker/mara-app/Dockerfile
+++ b/data-pipeline/docker/mara-app/Dockerfile
@@ -22,11 +22,21 @@ RUN apt-get update -y \
                 python-psycopg2 \
                 libpq-dev
 
-# Install go-crond
+# ========================================================================================================
+# Install go-crond (https://github.com/webdevops/go-crond)
+#
+# CRON Jobs in OpenShift:
+# - https://blog.danman.eu/cron-jobs-in-openshift/
+#
+# - go-crond was selected over OpenShift cron jobs, and attempting to get crond running on OpenShift
+#   - Allows the mara container to be running and the user interface to be available.
+#   - The history issues with the OpenShift cron jobs are avoided.
+# --------------------------------------------------------------------------------------------------------
 ARG GOCROND_VERSION=0.6.1
 ADD https://github.com/webdevops/go-crond/releases/download/$GOCROND_VERSION/go-crond-64-linux /usr/bin/
 RUN mv /usr/bin/go-crond-64-linux /usr/bin/go-crond \
     && chmod ug+x /usr/bin/go-crond
+# ========================================================================================================
 
 # mara-app section - this is specific to our use of mara
 # ======================================================
