--- a/bcreg-x/Dockerfile
+++ b/bcreg-x/Dockerfile
@@ -1,12 +1,12 @@
 #FROM vonx-base
-FROM bcgovimages/von-image:py36-1.0rc3
+FROM bcgovimages/von-image:py36-1.6-0
 
 WORKDIR $HOME
 
-RUN pip install --no-cache-dir \
-    gunicorn \
-    git+https://github.com/PSPC-SPAC-buyandsell/didauth.git@v1.1 \
-    git+https://github.com/PSPC-SPAC-buyandsell/von-x.git@v2
+#RUN pip install --no-cache-dir \
+#    gunicorn \
+#    git+https://github.com/PSPC-SPAC-buyandsell/didauth.git@v1.2 \
+#    git+https://github.com/PSPC-SPAC-buyandsell/von-x.git@indy-1.6
 
 # `ADD --chown=` is not available in OpenShift yet.
 # ADD --chown=indy:indy . $HOME
