--- a/bcreg-x/Dockerfile
+++ b/bcreg-x/Dockerfile
@@ -3,8 +3,8 @@ FROM bcgovimages/von-image:py36-1.6-0
 
 WORKDIR $HOME
 
-#RUN pip install --no-cache-dir \
-#    gunicorn \
+RUN pip install --no-cache-dir \
+   gunicorn
 #    git+https://github.com/PSPC-SPAC-buyandsell/didauth.git@v1.2 \
 #    git+https://github.com/PSPC-SPAC-buyandsell/von-x.git@indy-1.6
 
