--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -47,54 +47,72 @@ issuers:
               value:
                 input: registration_date
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_name
                 from: value
               value:
                 input: entity_name
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_name_effective
                 from: value
               value:
                 input: entity_name_effective
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_name_assumed
                 from: value
               value:
                 input: entity_name_assumed
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_name_assumed_effective
                 from: value
               value:
                 input: entity_name_assumed_effective
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_name_trans
                 from: value
               value:
                 input: entity_name_trans
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_name_trans_effective
                 from: value
               value:
                 input: entity_name_trans_effective
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_status
                 from: value
               value:
                 input: entity_status
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_status_effective
                 from: value
               value:
                 input: entity_status_effective
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: entity_type
                 from: value
@@ -131,18 +149,24 @@ issuers:
               value:
                 input: relationship
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: relationship_description
                 from: value
               value:
                 input: relationship_description
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: relationship_status
                 from: value
               value:
                 input: relationship_status
                 from: claim
+          - model: category
+            fields:
               type: 
                 input: relationship_status_effective
                 from: value
