--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -33,87 +33,75 @@ issuers:
         mapping:
           - model: name
             fields:
-              text:
-                input: entity_name
-                from: claim
               type:
                 input: entity_name
                 from: value
-          - model: category
-            fields:
-              type: 
-                input: registration_date
-                from: value
-              value:
-                input: registration_date
-                from: claim
-          - model: category
-            fields:
-              type: 
-                input: entity_name
-                from: value
-              value:
+              text:
                 input: entity_name
                 from: claim
-          - model: category
+          - model: name
             fields:
-              type: 
-                input: entity_name_effective
-                from: value
-              value:
-                input: entity_name_effective
-                from: claim
-          - model: category
-            fields:
-              type: 
+              type:
                 input: entity_name_assumed
                 from: value
-              value:
+              text:
                 input: entity_name_assumed
                 from: claim
-          - model: category
+          - model: attribute
             fields:
-              type: 
+              type:
+                input: registration_date
+                from: value
+              format:
+                input: date
+                from: value
+              value:
+                input: registration_date
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: entity_name_effective
+                from: value
+              format:
+                input: date
+                from: value
+              value:
+                input: entity_name_effective
+                from: claim
+          - model: attribute
+            fields:
+              type:
                 input: entity_name_assumed_effective
                 from: value
+              format:
+                input: date
+                from: value
               value:
                 input: entity_name_assumed_effective
                 from: claim
           - model: category
             fields:
-              type: 
-                input: entity_name_trans
-                from: value
-              value:
-                input: entity_name_trans
-                from: claim
-          - model: category
-            fields:
-              type: 
-                input: entity_name_trans_effective
-                from: value
-              value:
-                input: entity_name_trans_effective
-                from: claim
-          - model: category
-            fields:
-              type: 
+              type:
                 input: entity_status
                 from: value
               value:
                 input: entity_status
                 from: claim
-          - model: category
+          - model: attribute
             fields:
-              type: 
+              type:
                 input: entity_status_effective
+                from: value
+              format:
+                input: date
                 from: value
               value:
                 input: entity_status_effective
                 from: claim
           - model: category
             fields:
-              type: 
+              type:
                 input: entity_type
                 from: value
               value:
@@ -145,15 +133,15 @@ issuers:
         mapping:
           - model: category
             fields:
-              type: 
+              type:
                 input: relationship
                 from: value
               value:
                 input: relationship
                 from: claim
-          - model: category
+          - model: attribute
             fields:
-              type: 
+              type:
                 input: relationship_description
                 from: value
               value:
@@ -161,16 +149,19 @@ issuers:
                 from: claim
           - model: category
             fields:
-              type: 
+              type:
                 input: relationship_status
                 from: value
               value:
                 input: relationship_status
                 from: claim
-          - model: category
+          - model: attribute
             fields:
-              type: 
+              type:
                 input: relationship_status_effective
+                from: value
+              format:
+                input: date
                 from: value
               value:
                 input: relationship_status_effective
