--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -53,7 +53,7 @@ issuers:
                 input: registration_date
                 from: value
               format:
-                input: date
+                input: datetime
                 from: value
               value:
                 input: registration_date
@@ -64,7 +64,7 @@ issuers:
                 input: entity_name_effective
                 from: value
               format:
-                input: date
+                input: datetime
                 from: value
               value:
                 input: entity_name_effective
@@ -75,7 +75,7 @@ issuers:
                 input: entity_name_assumed_effective
                 from: value
               format:
-                input: date
+                input: datetime
                 from: value
               value:
                 input: entity_name_assumed_effective
@@ -94,7 +94,7 @@ issuers:
                 input: entity_status_effective
                 from: value
               format:
-                input: date
+                input: datetime
                 from: value
               value:
                 input: entity_status_effective
@@ -161,7 +161,7 @@ issuers:
                 input: relationship_status_effective
                 from: value
               format:
-                input: date
+                input: datetime
                 from: value
               value:
                 input: relationship_status_effective
