--- a/bcreg-x/config/settings.yml
+++ b/bcreg-x/config/settings.yml
@@ -8,3 +8,4 @@ default:
   #WALLET_SEED_BCREG: TestBCGovSeedforSLN0000000000001
   #INDY_GENESIS_URL: https://raw.githubusercontent.com/sovrin-foundation/sovrin/1.1.50-master/sovrin/pool_transactions_sandbox_genesis
   #LEDGER_PROTOCOL_VERSION: "1.3"
+  #AUTO_REGISTER_DID: 0
