--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,11 +40,20 @@ services:
       TOB_API_URL: ${TOB_API_URL:-}
       TOB_APP_URL: ${TOB_APP_URL:-}
       WALLET_SEED_BCREG: ${WALLET_SEED_BCREG:-}
+      WALLET_TYPE: ${WALLET_TYPE}
+      WALLET_ENCRYPTION_KEY: ${WALLET_ENCRYPTION_KEY}
+      POSTGRESQL_WALLET_HOST: ${POSTGRESQL_WALLET_HOST}
+      POSTGRESQL_WALLET_PORT: ${POSTGRESQL_WALLET_PORT}
+      POSTGRESQL_WALLET_USER: ${POSTGRESQL_USER}
+      POSTGRESQL_WALLET_PASSWORD: ${POSTGRESQL_PASSWORD}
+      POSTGRESQL_WALLET_ADMIN_PASSWORD: ${POSTGRESQL_ADMIN_PASSWORD}
     external_links:
        - tob_tob-api_1:tob-api
     networks:
       - orgbook
       - vonx
+    depends_on:
+      - wallet-db
     volumes:
       - bcreg-agent-wallet:/home/indy/.indy_client/wallet
 
@@ -99,11 +108,26 @@ services:
     volumes:
       - mara-data:/var/lib/pgsql/data
 
+  wallet-db:
+    image: registry.access.redhat.com/rhscl/postgresql-95-rhel7:9.5
+    environment:
+      - POSTGRESQL_USER=${POSTGRESQL_USER}
+      - POSTGRESQL_PASSWORD=${POSTGRESQL_PASSWORD}
+      - POSTGRESQL_DATABASE=${POSTGRESQL_DATABASE}
+      - POSTGRESQL_ADMIN_PASSWORD=${POSTGRESQL_ADMIN_PASSWORD}
+    networks:
+      - orgbook
+    ports:
+      - 5433:5432
+    volumes:
+      - wallet-db:/var/lib/pgsql/data
+
 volumes:
   caddy-data:
   caddy-logs:
   bcreg-agent-wallet:
   mara-data:
+  wallet-db:
 
 networks:
   vonx:
