Add support for handling DIDs
- User can specify the DIDs associated to the wallet(s) at the time of configuration deployment
- The DIDs are stored with the other wallet credentials (key and seeds).

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,14 +39,15 @@ services:
       PYTHON_ENV: ${PYTHON_ENV:-development}
       TOB_API_URL: ${TOB_API_URL:-}
       TOB_APP_URL: ${TOB_APP_URL:-}
-      WALLET_SEED_BCREG: ${WALLET_SEED_BCREG:-}
       WALLET_TYPE: ${WALLET_TYPE}
-      WALLET_ENCRYPTION_KEY: ${WALLET_ENCRYPTION_KEY}
       POSTGRESQL_WALLET_HOST: ${POSTGRESQL_WALLET_HOST}
       POSTGRESQL_WALLET_PORT: ${POSTGRESQL_WALLET_PORT}
       POSTGRESQL_WALLET_USER: ${POSTGRESQL_USER}
       POSTGRESQL_WALLET_PASSWORD: ${POSTGRESQL_PASSWORD}
       POSTGRESQL_WALLET_ADMIN_PASSWORD: ${POSTGRESQL_ADMIN_PASSWORD}
+      WALLET_ENCRYPTION_KEY: ${WALLET_ENCRYPTION_KEY}
+      WALLET_SEED_BCREG: ${WALLET_SEED_BCREG:-}
+      ISSUER_WALLET_DID: ${ISSUER_WALLET_DID}
     external_links:
        - tob_tob-api_1:tob-api
     networks:
