--- a/bcreg-x/config/settings.yml
+++ b/bcreg-x/config/settings.yml
@@ -4,7 +4,8 @@ default:
   TEMPLATE_PATH: ../templates
   TOB_API_URL: http://tob-api:8080/api/v2
   TOB_APP_URL: http://localhost:8080
-  WALLET_SEED_BCREG: ${WALLET_SEED_BCREG:-bc_registries_dev_00000000000000}
-  INDY_GENESIS_URL: ${GENESIS_URL}
-  LEDGER_PROTOCOL_VERSION: ${LEDGER_PROTOCOL_VERSION}
-  AUTO_REGISTER_DID: ${AUTO_REGISTER_DID}
+  WALLET_SEED_BCREG: bc_registries_dev_00000000000000
+  #WALLET_SEED_BCREG: TestBCGovSeedforSLN0000000000001
+  #INDY_GENESIS_URL: https://raw.githubusercontent.com/sovrin-foundation/sovrin/1.1.50-master/sovrin/pool_transactions_sandbox_genesis
+  #LEDGER_PROTOCOL_VERSION: "1.3"
+  #AUTO_REGISTER_DID: 0
