update logo image

--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -4,7 +4,7 @@ issuers:
     abbreviation: BCReg
     url: https://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/citizens-services/bc-registries-online-services
     email: bcregistries@gov.bc.ca
-    logo_path: ../assets/img/bcreg-logo.png
+    logo_path: ../assets/img/bcreg-logo-square.jpg
 
     connection:
       type: TheOrgBook
