--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,8 +46,8 @@ services:
       POSTGRESQL_WALLET_PASSWORD: ${POSTGRESQL_PASSWORD}
       POSTGRESQL_WALLET_ADMIN_PASSWORD: ${POSTGRESQL_ADMIN_PASSWORD}
       WALLET_ENCRYPTION_KEY: ${WALLET_ENCRYPTION_KEY}
-      WALLET_SEED_BCREG: ${WALLET_SEED_BCREG:-}
-      ISSUER_WALLET_DID: ${ISSUER_WALLET_DID}
+      INDY_WALLET_SEED: ${INDY_WALLET_SEED:-}
+      INDY_WALLET_DID: ${INDY_WALLET_DID}
     external_links:
        - tob_tob-api_1:tob-api
     networks:
