--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -146,7 +146,7 @@ issuers:
               value:
                 input: home_jurisdiction
                 from: claim
-          - model: attribute
+          - model: category
             fields:
               type:
                 input: reason_description
