--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,21 @@ genesis
 
 # Local config
 .env
+
+
+# Ignore local Gradle files and folders
+.settings
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
