--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -29,7 +29,7 @@ issuers:
 
     credential_types:
       - description: Registration
-        schema: registration.registries
+        schema: registration.registries.ca
         issuer_url: $APPLICATION_URL_INCORP
         credential:
           effective_date:
@@ -156,7 +156,7 @@ issuers:
                 from: claim
 
       - description: Relationship
-        schema: relationship.registries
+        schema: relationship.registries.ca
         issuer_url: $APPLICATION_URL_DBA
         credential:
           effective_date:
@@ -223,7 +223,7 @@ issuers:
                 from: claim
 
       - description: Corporate Address
-        schema: address.registries
+        schema: address.registries.ca
         issuer_url: $APPLICATION_URL_ADDRESS
         credential:
           effective_date:
